--- a/css/style.css
+++ b/css/style.css
@@ -1017,84 +1017,367 @@ footer {
 /********* MEDIA CUIRE **********/
 /* *****************************/
 @media screen and (min-width: 769px) and (max-width: 991px) {
-    /*******************************************/
-    /* CODIGO DE CONDUCTA PARA MAYOR SEGURIDAD */
-    /*******************************************/
-    .conducta-container {
-        flex-direction: column;
-        align-items: center;
-    }
-    .container img {
-        margin-bottom: 20px;
-    }
-    .container svg {
-        max-width: 16rem;
-        height: auto;
-        margin-bottom: 4rem;
-        padding-left: 3rem;
-    }
-    .informacionUtil {
-        font-size: 30px;
-        color: white;
-    }
-    .parrafo-informacionUtil {
-        color: white;
-        font-size: 13px;
-        font-family: 'Montserrat', sans-serif;
-        font-weight: 500;
-        margin-left: 20px;
-    }
-
-    /********************/
+  /********************/
     /* INICIO-SUPERIOR */
     /******************/
-    .hover-fondo-superior:hover {
-        color: black;
-        transition: 0.5s;
+    .fondo-superiro-navbar {
+      padding: 5px;
+  }
+  .hover-fondo-superior:hover {
+      color: black;
+      transition: 0.5s;
+  }
+  .logo-transporte-escolar {
+      margin-top: 10px;
+  }
+  .inicio {
+      background: url("../imagenes/fondo-pagina-principal.jpeg");
+      background-size: cover;
+      background-position: center center;
+      height: 50vh;
+  }
+  /* ***************************/
+  /* TEXTO DE IMAGEN PRINCIPAL */
+  /* ***************************/
+  .inicio .contenido .presentacion {
+      height: 50vh;
+  }
+      .linea-presentacion {
+          font-size: 20px;
+          color: rgba(255, 255, 255, 0.637);
+      }
+      .linea-presentacion2 {
+          margin-top: -40px;
+          font-size: 20px;
+          color: rgba(255, 255, 255, 0.637);
+      }
+      .inicio .contenido .presentacion .bienvenida {
+          font-size: 15px;
+      }
+      .inicio .contenido .presentacion h2 {
+          font-size: 20px;
+          margin-bottom: 20px;
+          text-align: center;
+      }
+      .descripcion {
+          font-size: 15px;
+          text-align: center;
+      }
+      .inicio .contenido .presentacion a {
+          font-size: 10px;
+          margin: 5px;
+          padding: 5px 10px;
+      }
+   /**********************/
+    /* NUESTROS SERVICIOS */
+    /**********************/
+  .titulo-nuestros-servicios h2{
+      font-size: 34px;
+  }
+  .titulo-nuestros-servicios p{
+      font-size: 16px;
+  }
+  .container-informacion {
+      flex-direction: column;
+      padding: 5px;
+      padding-top: 2em;
     }
-    .submenu-principal {
-        font-size: .60em;
-        letter-spacing: 1px;
+    .column,
+    .column2 {
+      flex: 10%;
     }
-    .posicion-letras {
-        margin-left: -70px;
+    .ESTAS-INTERESADO-EN-ALGUNO-DE-NUESTROS-SERVICIOS{
+      background: url(../imagenes/vv\ -\ copia\ -\ copia.jpeg) ;
+      background-size: cover;
+      color: white;
+      padding: 70px;
+      height: 0vh;
+      margin-bottom: 5em;
+      }
+      .ubicacion{
+          margin-top:-60px;
+      }
+      .ESTAS-INTERESADO-EN-ALGUNO-DE-NUESTROS-SERVICIOS h2{
+          font-size: 14px;
+      }
+      .ESTAS-INTERESADO-EN-ALGUNO-DE-NUESTROS-SERVICIOS p{
+          font-size: 8px;
+      }
+      .ESTAS-INTERESADO-EN-ALGUNO-DE-NUESTROS-SERVICIOS .btn{
+          margin-top: 0px;
+      }
+      .btn.btn-primary {
+          font-size: 8px;
+          background: #f7931d;
+          border-color: #F16521;
+          transition: 0.5s;
+          color: rgb(243, 243, 243);
+          padding: 5px 11px;
+          font-family: 'Roboto', sans-serif;
+          line-height: 1.33;
+          border-radius: 6px;
+          border-width: 0;
+          border-bottom-width: 3px;
+      }
+      .btn.btn-primary:hover {
+          transition: 0.5s;
+          transform: scale(1.2);
+          background: #f7931d;
+          border-color: #F16521;
+      }
+  /*******************************************/
+      /* CODIGO DE CONDUCTA PARA MAYOR SEGURIDAD */
+      /*******************************************/
+      .conducta-container {
+          flex-direction: column;
+          align-items: center;
+      }
+      .container img {
+          margin-bottom: 20px;
+      }
+      .container svg {
+          max-width: 16rem;
+          height: auto;
+          margin-bottom: 4rem;
+          padding-left: 3rem;
+      }
+      .informacionUtil {
+          font-size: 30px;
+          color: white;
+      }
+      .parrafo-informacionUtil {
+          color: white;
+          font-size: 13px;
+          font-family: 'Montserrat', sans-serif;
+          font-weight: 500;
+          margin-left: 20px;
+      }
+  /**********************/
+  /* NUESTRAS UNIDADES */
+  /********************/
+  .NUESTRAS-UNIDADES {
+      padding: 40px ;
     }
-    .logo-transporte-escolar {
-        margin-top: 0px;
+    .NUESTRAS-UNIDADES h2{
+      font-size: 34px;
+  }
+  .imagen-hover {
+      margin-bottom: 2em;
     }
-    .submenu-principal {
-        font-size: .60em;
-        letter-spacing: 1px;
+  .columna-unidades{
+      display: block;
+  }
+  /***********************************/
+  /****** NUESTRA TRAYECTORIA *******/
+  /*********************************/
+  .titulo-y-parrafo .linea-nuestra-trayectoria{
+      font-size: 30px;
+  }
+  .titulo-y-parrafo .parrafo-2{
+      font-size: 1em;
+      margin-top: -80px;
+      padding-bottom: 3em;
+  }
+  /*********************/
+  /* NUESTROS VALORES */
+  /*******************/
+  .contenedori {
+    padding: 10px;
+    background-color: #f8f8f8;
+    border: 1px solid #ddd;
+    margin: 20px;
+  }
+  .contenedori h2 {
+    font-size: 24px;
+    color: #fff;
+    margin-bottom: 10px;
+  }
+  .contenedori .p-valores {
+    font-size: 20px;
+    color:#fff;
+    margin-bottom: 20px;
+  }
+  .iconos {
+    width: 100%;
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-between;
+  }
+  .icono-valores {
+    width: 50%;
+    margin-bottom: 30px;
+  }
+  .icono-valores h3 {
+    margin-top: 10px;
+    font-weight: 600;
+    font-family: 'Roboto', sans-serif;
+    font-size: 14px;
+    color: #fff;
+    padding: 10px;
+  }
+  .icon-circle {
+      height: 54px;
+      line-height: 54px;
+      text-align: center;
+      width: 54px;
+      border-radius: 100%;
+      color:rgb(255, 147, 59);
+      box-shadow: inset 0 0 0 1px rgb(255, 147, 59);
+      -webkit-box-shadow: inset 0 0 0 1px rgb(255, 147, 59);
+      border: 5px;
+  }
+  .icon-circle i {
+    font-size: 24px;
+    color: #fff;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+  }
+  
+  /******************************/
+  /********** PERSONAL **********/
+  /*****************************/
+  .lineaDerecha{
+      border-right: solid 0px;
+  }
+  /*****************************/
+  /********** FOOTER **********/
+  /***************************/
+  footer {
+      padding: 10px 10px 0px 10px;
     }
-    .diseño-ig {
-        margin-top: 5px;
-        color: #E1306C;
-        font-size: 30px;
-        margin-left: 50px;
+    .columna {
+      flex-basis: 100%;
+      margin-bottom: 2em;
     }
-    .fa-facebook {
-        margin-top: 5px;
-        color: #3b5998;
-        font-size: 30px;
-        margin-left: 50px;
-    }
-    .diseño-ig:hover {
-        color: rgb(255, 147, 59);
-        transition: 0.4s;
-        transform: scale(1.2);
-    }
-    .fa-facebook:hover {
-        color: rgb(255, 147, 59);
-        transition: 0.4s;
-        transform: scale(1.2);
-    }
-    .lineaDerecha{
-        border-right: solid 0px;
-    }
+  .linea-solicitar-informacion{
+     margin-bottom: 30px;
+      border-top: solid 2px;
+      border-bottom: solid 2px;
+      border-color: #878787;
+      padding-bottom: 1em;
+      padding-top: 1em;
+  }
+  .logos-contacto ul{
+    padding-left: 0px;
+    padding-right: auto;
+  }
+    .todos-los-derechos-reservados {
+      padding: 10px;
+  }
 }
 
 @media screen and (min-width:481px) and (max-width: 768px) {
-    /*******************************************/
+    /********************/
+    /* INICIO-SUPERIOR */
+    /******************/
+  .fondo-superiro-navbar {
+    padding: 5px;
+}
+.hover-fondo-superior:hover {
+    color: black;
+    transition: 0.5s;
+}
+.logo-transporte-escolar {
+    margin-top: 10px;
+}
+.inicio {
+    background: url("../imagenes/fondo-pagina-principal.jpeg");
+    background-size: cover;
+    background-position: center center;
+    height: 50vh;
+}
+/* ***************************/
+/* TEXTO DE IMAGEN PRINCIPAL */
+/* ***************************/
+.inicio .contenido .presentacion {
+    height: 50vh;
+}
+    .linea-presentacion {
+        font-size: 20px;
+        color: rgba(255, 255, 255, 0.637);
+    }
+    .linea-presentacion2 {
+        margin-top: -40px;
+        font-size: 20px;
+        color: rgba(255, 255, 255, 0.637);
+    }
+    .inicio .contenido .presentacion .bienvenida {
+        font-size: 15px;
+    }
+    .inicio .contenido .presentacion h2 {
+        font-size: 20px;
+        margin-bottom: 20px;
+        text-align: center;
+    }
+    .descripcion {
+        font-size: 15px;
+        text-align: center;
+    }
+    .inicio .contenido .presentacion a {
+        font-size: 10px;
+        margin: 5px;
+        padding: 5px 10px;
+    }
+ /**********************/
+  /* NUESTROS SERVICIOS */
+  /**********************/
+.titulo-nuestros-servicios h2{
+    font-size: 34px;
+}
+.titulo-nuestros-servicios p{
+    font-size: 16px;
+}
+.container-informacion {
+    flex-direction: column;
+    padding: 5px;
+    padding-top: 2em;
+  }
+  .column,
+  .column2 {
+    flex: 10%;
+  }
+  .ESTAS-INTERESADO-EN-ALGUNO-DE-NUESTROS-SERVICIOS{
+    background: url(../imagenes/vv\ -\ copia\ -\ copia.jpeg) ;
+    background-size: cover;
+    color: white;
+    padding: 70px;
+    height: 0vh;
+    margin-bottom: 5em;
+    }
+    .ubicacion{
+        margin-top:-60px;
+    }
+    .ESTAS-INTERESADO-EN-ALGUNO-DE-NUESTROS-SERVICIOS h2{
+        font-size: 14px;
+    }
+    .ESTAS-INTERESADO-EN-ALGUNO-DE-NUESTROS-SERVICIOS p{
+        font-size: 8px;
+    }
+    .ESTAS-INTERESADO-EN-ALGUNO-DE-NUESTROS-SERVICIOS .btn{
+        margin-top: 0px;
+    }
+    .btn.btn-primary {
+        font-size: 8px;
+        background: #f7931d;
+        border-color: #F16521;
+        transition: 0.5s;
+        color: rgb(243, 243, 243);
+        padding: 5px 11px;
+        font-family: 'Roboto', sans-serif;
+        line-height: 1.33;
+        border-radius: 6px;
+        border-width: 0;
+        border-bottom-width: 3px;
+    }
+    .btn.btn-primary:hover {
+        transition: 0.5s;
+        transform: scale(1.2);
+        background: #f7931d;
+        border-color: #F16521;
+    }
+/*******************************************/
     /* CODIGO DE CONDUCTA PARA MAYOR SEGURIDAD */
     /*******************************************/
     .conducta-container {
@@ -1121,77 +1404,121 @@ footer {
         font-weight: 500;
         margin-left: 20px;
     }
-
-    /********************/
-    /* INICIO-SUPERIOR */
-    /******************/
-    .hover-fondo-superior:hover {
-        color: black;
-        transition: 0.5s;
-    }
-    .submenu-principal {
-        font-size: .60em;
-        letter-spacing: 1px;
-    }
-    .posicion-letras {
-        margin-left: -70px;
-    }
-    .logo-transporte-escolar {
-        margin-top: 0px;
-    }
-    .submenu-principal {
-        font-size: .60em;
-        letter-spacing: 1px;
-    }
-    .diseño-ig {
-        margin-top: 5px;
-        color: #E1306C;
-        font-size: 30px;
-        margin-left: 50px;
-    }
-    .fa-facebook {
-        margin-top: 5px;
-        color: #3b5998;
-        font-size: 30px;
-        margin-left: 50px;
-    }
-    .diseño-ig:hover {
-        color: rgb(255, 147, 59);
-        transition: 0.4s;
-        transform: scale(1.2);
-    }
-    .fa-facebook:hover {
-        color: rgb(255, 147, 59);
-        transition: 0.4s;
-        transform: scale(1.2);
-    }
-    .lineaDerecha{
-        border-right: solid 0px;
-    }
+/**********************/
+/* NUESTRAS UNIDADES */
+/********************/
+.NUESTRAS-UNIDADES {
+    padding: 40px ;
+  }
+  .NUESTRAS-UNIDADES h2{
+    font-size: 34px;
+}
+.imagen-hover {
+    margin-bottom: 2em;
+  }
+.columna-unidades{
+    display: block;
+}
+/***********************************/
+/****** NUESTRA TRAYECTORIA *******/
+/*********************************/
+.titulo-y-parrafo .linea-nuestra-trayectoria{
+    font-size: 30px;
+}
+.titulo-y-parrafo .parrafo-2{
+    font-size: 1em;
+    margin-top: -80px;
+    padding-bottom: 3em;
+}
+/*********************/
+/* NUESTROS VALORES */
+/*******************/
+.contenedori {
+  padding: 10px;
+  background-color: #f8f8f8;
+  border: 1px solid #ddd;
+  margin: 20px;
+}
+.contenedori h2 {
+  font-size: 24px;
+  color: #fff;
+  margin-bottom: 10px;
+}
+.contenedori .p-valores {
+  font-size: 20px;
+  color:#fff;
+  margin-bottom: 20px;
+}
+.iconos {
+  width: 100%;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-between;
+}
+.icono-valores {
+  width: 50%;
+  margin-bottom: 30px;
+}
+.icono-valores h3 {
+  margin-top: 10px;
+  font-weight: 600;
+  font-family: 'Roboto', sans-serif;
+  font-size: 14px;
+  color: #fff;
+  padding: 10px;
+}
+.icon-circle {
+    height: 54px;
+    line-height: 54px;
+    text-align: center;
+    width: 54px;
+    border-radius: 100%;
+    color:rgb(255, 147, 59);
+    box-shadow: inset 0 0 0 1px rgb(255, 147, 59);
+    -webkit-box-shadow: inset 0 0 0 1px rgb(255, 147, 59);
+    border: 5px;
+}
+.icon-circle i {
+  font-size: 24px;
+  color: #fff;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
 }
 
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
+/******************************/
+/********** PERSONAL **********/
+/*****************************/
+.lineaDerecha{
+    border-right: solid 0px;
+}
+/*****************************/
+/********** FOOTER **********/
+/***************************/
+footer {
+    padding: 10px 10px 0px 10px;
+  }
+  .columna {
+    flex-basis: 100%;
+    margin-bottom: 2em;
+  }
+.linea-solicitar-informacion{
+   margin-bottom: 30px;
+    border-top: solid 2px;
+    border-bottom: solid 2px;
+    border-color: #878787;
+    padding-bottom: 1em;
+    padding-top: 1em;
+}
+.logos-contacto ul{
+  padding-left: 0px;
+  padding-right: auto;
+}
+  .todos-los-derechos-reservados {
+    padding: 10px;
+}
+}
 
 
 @media screen and (min-width:320px) and (max-width: 480px) {
@@ -1360,59 +1687,88 @@ footer {
 /* NUESTROS VALORES */
 /*******************/
 .contenedori {
-    padding: 60px ;
-  }
-.contenedori h2{
-    font-size: 34px;
+  padding: 10px;
+  background-color: #f8f8f8;
+  border: 1px solid #ddd;
+  margin: 20px;
 }
-.contenedori .p-valores{
-    font-size: 20px;
+.contenedori h2 {
+  font-size: 24px;
+  color: #fff;
+  margin-bottom: 10px;
 }
-  .iconos {
-    width: 100%;
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: space-between;
-  }
-  .icono-valores {
-    width: 15%;
-  }
-.icono-valores h3{
-    margin-top: 10px;
-    font-weight: 600;
-    font-family: 'Roboto', sans-serif;
-    font-size: 1em;
+.contenedori .p-valores {
+  font-size: 20px;
+  color:#fff;
+  margin-bottom: 20px;
+}
+.iconos {
+  width: 100%;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-between;
+}
+.icono-valores {
+  width: 50%;
+  margin-bottom: 30px;
+}
+.icono-valores h3 {
+  margin-top: 10px;
+  font-weight: 600;
+  font-family: 'Roboto', sans-serif;
+  font-size: 14px;
+  color: #fff;
+  padding: 10px;
 }
 .icon-circle {
-    display: inline-block;
-    width: 80px;
-    height: 80px;
-    line-height: 80px;
-    border: 2px solid #f7931d;
-    background-color: f7931d;
-    border-radius: 100px;
-    position: relative;
-    }
+    height: 54px;
+    line-height: 54px;
+    text-align: center;
+    width: 54px;
+    border-radius: 100%;
+    color:rgb(255, 147, 59);
+    box-shadow: inset 0 0 0 1px rgb(255, 147, 59);
+    -webkit-box-shadow: inset 0 0 0 1px rgb(255, 147, 59);
+    border: 5px;
+}
+.icon-circle i {
+  font-size: 24px;
+  color: #fff;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+}
 
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-    
+/******************************/
+/********** PERSONAL **********/
+/*****************************/
+.lineaDerecha{
+    border-right: solid 0px;
+}
+/*****************************/
+/********** FOOTER **********/
+/***************************/
+footer {
+    padding: 10px 10px 0px 10px;
+  }
+  .columna {
+    flex-basis: 100%;
+    margin-bottom: 2em;
+  }
+.linea-solicitar-informacion{
+   margin-bottom: 30px;
+    border-top: solid 2px;
+    border-bottom: solid 2px;
+    border-color: #878787;
+    padding-bottom: 1em;
+    padding-top: 1em;
+}
+.logos-contacto ul{
+  padding-left: 0px;
+  padding-right: auto;
+}
+  .todos-los-derechos-reservados {
+    padding: 10px;
+}
 }
