--- a/css/style.css
+++ b/css/style.css
@@ -229,6 +229,7 @@ ul li .diseño-texto-navbar {
     transition: 0.5s;
     z-index: 1;
     letter-spacing: 0px;
+    border-bottom: solid 3px rgba(255, 147, 59, 0);
 }
 ul li .diseño-texto-navbar:before {
     content: "";
@@ -240,9 +241,8 @@ ul li .diseño-texto-navbar:before {
     border-bottom: 2px solid rgba(255, 255, 255, 0.9);
     transform: scaleY(2);
     opacity: 0;
-    transition: 0.3s;
 }
-ul li .diseño-texto-navbar:after {
+/* ul li .diseño-texto-navbar:after {
     content: "";
     position: absolute;
     top: 2px;
@@ -254,18 +254,19 @@ ul li .diseño-texto-navbar:after {
     opacity: 0;
     transition: 0.3s;
     z-index: -1;
-}
+} */
 ul li .diseño-texto-navbar:hover {
-    color: #fff;
+    color: rgb(255, 147, 59);
+    border-bottom: solid 3px rgb(255, 147, 59);
 }
-ul li .diseño-texto-navbar:hover:before {
+/* ul li .diseño-texto-navbar:hover:before {
     transform: scaleY(1);
     opacity: 1;
 }
 ul li .diseño-texto-navbar:hover:after {
     transform: scaleY(1);
     opacity: 1;
-}
+} */
 .inicio {
     background: url("../imagenes/fondo-pagina-principal.jpeg");
     background-size: cover;
