--- a/css/style.css
+++ b/css/style.css
@@ -205,7 +205,7 @@ body::-webkit-scrollbar-thumb:hover {
     
 }
 .fondo-del-nav {
-    background-color: rgba(255, 255, 255, 0.9);
+    background-color: rgb(255, 255, 255);
     border-bottom: solid 5px;
     border-color: rgb(255, 147, 59);
 }
